# Page-analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: app.py  check.py  config.py  database.py  exception.py  normalize.py  url.py  url_manager.py  validator.py  views.py
page_analyzer/templates/: _list_urls.html  _show_url.html  index.html  list_urls.html  show_url.html  show_urls.html
